--- a/index.html
+++ b/index.html
@@ -163,6 +163,38 @@
             margin:auto;
             padding: 0px 47px;
         }
+        @media screen and (max-width: 1400px) {
+            nav{
+                flex-direction: column;
+            }
+          body{
+          }
+          .box{
+            flex-direction: column;
+          }
+          .firstSection{
+            flex-direction: column-reverse;
+          }
+          .secondSection .vertical{
+            height: unset;
+          }
+          .vertical-title, .vertical-desc{
+            left:45px;
+          }
+          .secondSection.box{
+            width:50vw;
+          }
+          .leftSection{
+            width:100% !important;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+          }
+          .rightSection{
+            width: 720px !important;
+          }
+        }
 
     </style>
 </head>
@@ -182,7 +214,7 @@
     </header>
     <main>
         <section class="firstSection">
-            <div class="leftSection">Hi,My name is <span class="purple">Aniket Raj</span>
+            <div class="leftSection"><div>Hi,My name is</div> <span class="purple">Aniket Raj</span>
                 <div>I am a passionate</div>
                 <div>Tech enthusiast</div>
                 <span id="element"></span>
